--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,19 @@
   height: 390px;
   padding: 10px;
 }
+.stuffholder{
+text-align: center;
+  padding: 10px;
+  /* width: 50%; */
+  margin: auto;
+  border: 3px;
+  border-color: #ff0000;
+}
 
+
+#into{
+  scale: 30%;
+}
 #heading{
   text-align: center;
 
@@ -40,7 +52,7 @@
 
 body {
   margin: auto;
-  color:orangered;
+  color:rgb(255, 0, 234);
   background-color: #00004B;
   background-image: url("../images/background.jpg");
   background-size:100% auto;
@@ -85,7 +97,7 @@ a {
 }
 
 img {
-  width: 20%;
+  width: 50%;
   height: auto;
 }
 
